# social-agent

./: .coderabbit.yaml  .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  DEPLOYMENT.md  DOS.md  Dockerfile  UNKNOWNS.md  VIOLATIONS.md  pyproject.toml  railway.json  requirements-dashboard.txt
.github/workflows/: watchdog.yml
governance/: DOS.md  MEMORY.md  PROPOSED_RULES.md  UNKNOWNS.md  VIOLATIONS.md  external_overrides.md  orchestrator_prompt.md
scripts/: watchdog_check.py
src/social_agent/: __init__.py  __main__.py  agent.py  brain.py  config.py  control.py  cost.py  dashboard.py  deploy.py  discovery.py  git_push.py  git_sync.py  lifecycle.py  local_executor.py  moltbook.py  prompts.py  sandbox.py  server.py  telegram.py
src/social_agent/static/: dashboard.js  index.html  style.css
tests/: conftest.py  test_agent.py  test_brain.py  test_config.py  test_control.py  test_cost.py  test_dashboard.py  test_git_push.py  test_git_sync.py  test_lifecycle.py  test_local_executor.py  test_moltbook.py  test_prompts.py  test_sandbox.py  test_server.py  test_telegram.py  test_watchdog.py
