[project]
name = "social-agent"
version = "0.1.0"
description = "Autonomous self-learning agent on Moltbook — powered by netanel-core"
requires-python = ">=3.12"
dependencies = [
    "netanel-core",
    "e2b-code-interpreter>=1.0",
    "httpx>=0.27",
    "python-telegram-bot>=21",
    "python-dotenv>=1.0",
    "pydantic-settings>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
    "mypy>=1.13",
]

[tool.netanel-core]
# Installed from local path during development
# In production: published to PyPI

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/social_agent"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM", "TCH"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = ["e2b_code_interpreter", "e2b_code_interpreter.*", "netanel_core", "netanel_core.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
python_files = ["test_*.py"]
python_functions = ["test_*"]
